fixing overflow

--- a/scss/_projectsOverlay.scss
+++ b/scss/_projectsOverlay.scss
@@ -111,7 +111,7 @@
   padding: 1rem;
   width: 60%;
   height: auto;
-  overflow: scroll;
+  overflow: auto;
 
   p {
     margin-bottom: 0.5rem;
