--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -312,7 +312,6 @@
     width: 100%;
     height: 65%;
     max-height: 65%;
-    overflow: scroll;
 
     p {
       font-size: 0.8rem;
@@ -409,7 +408,6 @@
 
 
   .project-overlay-description {
-    overflow: scroll;
 
     p {
       line-height: 1rem;
